--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
-        jdk: [8, 11, 16]
+        jdk: [8, 11]
     runs-on: ubuntu-latest
 
     steps:
